# hdl-localization-ros2

./: .gitignore  README.md
scripts/: convert_to_pointcloud2.py
src/fast_gicp/: .gitignore  CMakeLists.txt  package.xml
src/hdl_global_localization/: CMakeLists.txt  package.xml
src/hdl_global_localization/config/: bbs_config.yaml  fpfh_config.yaml  general_config.yaml  hdl_global_localization.param.yaml  ransac_config.yaml
src/hdl_global_localization/include/hdl_global_localization/bbs/: occupancy_gridmap.hpp
src/hdl_global_localization/launch/: hdl_global_localization.launch.py
src/hdl_global_localization/src/: hdl_global_localization_node.cpp
src/hdl_global_localization/src/hdl_global_localization/engines/: global_localization_bbs.cpp
src/hdl_global_localization/src/hdl_global_localization/ransac/: ransac_pose_estimation.cpp
src/hdl_localization/: CMakeLists.txt  package.xml
src/hdl_localization/apps/: globalmap_server_nodelet.cpp  hdl_localization_nodelet.cpp
src/hdl_localization/data/: glim.pcd  outdoor_corridor.pcd
src/hdl_localization/include/hdl_localization/: pose_estimator.hpp
src/hdl_localization/launch/: hdl_localization.launch.py  hdl_localization_pointcloud.launch.py  hdl_localization_turtlebot.launch.py
src/hdl_localization/msg/: HdlRelocStatus.msg  ScanMatchingStatus.msg
src/hdl_localization/rviz/: hdl_3d_localization_ros2.rviz
src/hdl_localization/src/hdl_localization/: pose_estimator.cpp
src/ndt_omp/: CMakeLists.txt  package.xml
