<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fast_gicp</name>
  <version>0.0.0</version>
  <description>Fast point cloud registration for HDL (CPU default; CUDA optional)</description>

  <maintainer email="k.koide@aist.go.jp">k.koide</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libpcl-dev</depend>
  <depend>eigen</depend>
  <build_depend>libomp-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
