<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hdl_localization</name>
  <version>0.0.0</version>
  <description>3D LIDAR localization with global relocalization (ROS 2 Humble)</description>

  <maintainer email="koide@aisl.cs.tut.ac.jp">koide</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs_py</depend>
  <depend>livox_ros_driver2</depend>
  <depend>ndt_omp</depend>
  <depend>fast_gicp</depend>
  <depend>hdl_global_localization</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
