<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ndt_omp</name>
  <version>0.0.0</version>
  <description>OpenMP boosted NDT and GICP algorithms (ROS 2 Humble)</description>

  <maintainer email="koide@aisl.cs.tut.ac.jp">koide</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libpcl-dev</depend>
  <build_depend>libomp-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
